cluster/core/networking/traefik/dashboard/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    - traefik
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
      kind: Rule
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: rfc1918
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
